--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,6 +1,6 @@
 @media (max-width: 1024px){
   body{
-    width: 1024px;
+    max-width: 1024px;
   }
 
   /*                       header                          */
